<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_panecillo"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_panecillo" />
        <item
            android:id="@+id/nav_mitaddelmundo"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_mitaddelmundo" />
        <item
            android:id="@+id/nav_teleferico"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_teleferico" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_tema"
                android:icon="@drawable/ic_brush_black_24dp"
                android:title="@string/menu_tema" />
        </menu>
    </item>

</menu>
